samples/_failures_safe/1761511283_d22e46_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1e51bbe6.c: In function ‘main’:
./samples/SAFE/__tmp_1e51bbe6.c:146:26: error: ‘MAX_IN’ undeclared (first use in this function); did you mean ‘MAX_INPUT’?
  146 |     uint8_t decompressed[MAX_IN
      |                          ^~~~~~
      |                          MAX_INPUT
./samples/SAFE/__tmp_1e51bbe6.c:146:26: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_1e51bbe6.c:146:32: error: expected ‘]’ at end of input
  146 |     uint8_t decompressed[MAX_IN
      |                                ^
      |                                ]
./samples/SAFE/__tmp_1e51bbe6.c:146:5: error: expected declaration or statement at end of input
  146 |     uint8_t decompressed[MAX_IN
      |     ^~~~~~~
